#ifndef NAME2_H
#define NAME2_H

#include "Users.h"

class Name2 : public Users{



};

#endif